apps/papermerge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: papermerge
spec:
  selector:
    app: papermerge
  ports:
    - port: 8000
      targetPort: 8000
